...
import com.example.campusguide.UsabilityTrackerIRLUsers
import com.example.campusguide.ui.accessibility.AccessibleText
import com.google.firebase.Firebase
import com.google.firebase.analytics.analytics

enum class Campus {
    SGW,
    LOYOLA
}

@Composable
fun CampusToggle(
    selectedCampus: Campus,
...
                )
            },
            leadingIcon = if (showIcon) {
                {
                    Icon(
                        imageVector = Icons.Default.LocationOn,
                        contentDescription = "Loyola Campus",
                        tint = if (selectedCampus == Campus.LOYOLA)
                            MaterialTheme.colorScheme.onSecondary
                        else
                            MaterialTheme.colorScheme.onSecondaryContainer,
                        modifier = Modifier.size(20.dp)
                    )
...
