...
            }
        },
        confirmButton = {
            Row(horizontalArrangement = Arrangement.spacedBy(8.dp)) {
                if (onDirectionsClick != null) {
                    Button(
                        modifier = Modifier.semantics { contentDescription = "ShuttleInfoCardDirections" }
                            .testTag("ShuttleInfoCardDirections"),
                        onClick = {
                            onDismiss()
                            onDirectionsClick()

                            firebaseAnalytics.logEvent("shuttle_stop_info_card_directions_click", null)
...
